# fast_api_17112023

./: LICENSE  README.md  conftest.py  constants.py  main.py  pyproject.toml  storage.py
all_tests/: test_1_root.py
api/: api_cars.py
templates/: base.html
web/: web_part.py
