[tool.poetry]
name = "fast-api17112023"
version = "0.1.0"
description = ""
authors = ["“Mister_Grin” <“vanogrishin2007@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
